데이터조작

--- a/02.pandas/04_데이터조작.ipynb
+++ b/02.pandas/04_데이터조작.ipynb
@@ -241,7 +241,7 @@
     }
    ],
    "source": [
-    "titanic.survived.value_counts()"
+    "titanic.survived.value_counts() #survived 컬럼의 값을 알려줌 "
    ]
   },
   {
@@ -343,7 +343,7 @@
     }
    ],
    "source": [
-    "df[0].sort_values(ascending =False)"
+    "df[0].sort_values(ascending =False) #내림차순순"
    ]
   },
   {
