맛집 크롤링

--- a/05_크롤링/06_망고플레이트.ipynb
+++ b/05_크롤링/06_망고플레이트.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
     }
    ],
    "source": [
-    "info = driver.find_element_by_css_selector('.list-restaurant-item >  figure > figcaption > div > a > h2').text\n",
+    "info = driver.find_element_by_css_selector('.list-restaurant-item >  figure > figcaption > div > a > h2').text,\n",
     "info"
    ]
   },
@@ -518,7 +518,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 서치박스  '충정로역' 입력하기 "
+   ]
   },
   {
    "cell_type": "code",
@@ -706,6 +708,37 @@
     "num = detail.find_element_by_css_selector('.Restaurant__InfoItemLabel').text\n",
     "num"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# popup window인 경우에는 두 개\n",
+    "driver.window_handles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
